feat: 增加角色操作
